--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 </head>
 
 <body>
-    <form action="http://terrivel.herokuapp.com/monster" method="GET">
+    <form id="formulario" action="http://terrivel.herokuapp.com/monster" method="GET">
         <fieldset>
-            <legend>Formulário GET</legend>
-            <label>Numero de Pedras: <input type="number" name="num_pedras" min="0"></label><br>
-            <label>Tamanho de Pedras: <input type="number" name="tam_pedras" min="1" max="7" step="0.5"></label><br>
-            <label>Nome: <input type="text" pattern="[a-zA-z\s]+$" name="nome"></label><br>
-            <label>Cor do Céu 1:<input type="color" name="corCeu1" value="#ff0000"></label><br>
-            <label>Cor do Céu 2:<input type="color" name="corCeu2" value="#ff0000"></label><br>
-            <label>Tipo de Pedras:
+            <legend>Formulário GET<br></legend>
+            <label>Numero de Pedras:<br> <input type="number" name="num_pedras" min="0"></label><br>
+            <label>Tamanho de Pedras: <br><input type="number" name="tam_pedras" min="1" max="7" step="0.5"></label><br>
+            <label>Nome: <br><input type="text" pattern="[a-zA-z\s]+$" name="nome"></label><br>
+            <label>Cor do Céu 1:<br><input type="color" name="corCeu1" value="#ff0000"></label><br>
+            <label>Cor do Céu 2:<br><input type="color" name="corCeu2" value="#ff0000"></label><br>
+            <label>Tipo de Pedras:<br>
                 <select name="tipo_pedras">
                     <option value="marroada">MARROADA</option>
                     <option value="ametista">AMETISTA</option>
@@ -27,7 +27,7 @@
                 </select>
             </label><br>
 
-            <label>Tipo de Pedras Sortidas:
+            <label>Tipo de Pedras Sortidas:<br>
                 <select name="tipo_pedras_sortidas">
                     <option value="sim">SIM</option>
                     <option value="nao">NÃO</option>
@@ -37,7 +37,7 @@
         </fieldset>
     </form>
     <br><br><br><br>
-    <form action="http://terrivel.herokuapp.com/monster" method="POST">
+    <form id="formulario" action="http://terrivel.herokuapp.com/monster" method="POST">
         <fieldset >
             <legend>Formulário POST</legend>
             <label>Numero de Pedras: <input type="number" name="num_pedras" min="0"></label><br>
